Fixed a contrast issue in the cards.

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -86,7 +86,7 @@
         border-radius: initial !important;
         box-shadow: initial !important;
         
-        .header, .description {
+        .header, .description, .meta {
             color: white !important;
         }
 
